fix: fixed text alignment @ about; description; left

--- a/portfolio/src/components/About/About.css
+++ b/portfolio/src/components/About/About.css
@@ -650,7 +650,7 @@
     
     .about-text p {
         font-size: 1rem;
-        text-align: center;
+        text-align: left;
         line-height: 25px;
     }
 
@@ -791,8 +791,9 @@
     }
     
     .about-text p {
+        padding: 10px;
         font-size: 0.9rem;
-        text-align: center;
+        text-align: left;
     }
 
     .socials {
